<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_components"
            android:icon="@drawable/ic_action_components"
            android:title="@string/menu_components" />
        <item
            android:id="@+id/nav_dishes"
            android:icon="@drawable/ic_action_dishes"
            android:title="@string/menu_dishes" />
        <item
            android:id="@+id/nav_country"
            android:icon="@drawable/ic_action_country"
            android:title="@string/menu_country" />
        <item
            android:id="@+id/nav_authors"
            android:icon="@drawable/ic_action_authors"
            android:title="@string/menu_authors" />
    </group>
</menu>